syntax = "proto3";

option java_multiple_files = true;
option java_package = "ar.edu.itba.pod.grpc";


// En gRPC se manda todo en un UNICO objeto (HelloRequest) y todo llego en un UNICO objeto de respuesta (HelloReply)
// El request es un objeto que tiene todos los parametros que se mandan
service Greeter {
 rpc SayHello (HelloRequest) returns (HelloReply) {}
}


// The request message containing the user's name.
message HelloRequest {
 string name = 1;
}

// The response message containing the greetings
message HelloReply {
 string message = 1;
}
